--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <a href="home.html"><img src="nokialogo.png" alt="Logo" class="logo-lower-left"></a>
     <ul>
       <li><a href="products.html" class="nav-link">Products</a></li>
-      <li><a href="contact.html" class="nav-link">Contact</a></li>
+      <li><a href="contact.php" class="nav-link">Contact</a></li>
       <li><a href="about.html" class="nav-link">We Are Nokia</a></li>
       <li><a href="support.html" class="nav-link">Support</a></li>
     </ul>
@@ -84,6 +84,7 @@
 
 <footer class="contactfoot">
   <p class="copyright">Copyright © 2023 Nokia. All rights reserved.</p>
+  <p><a href="connect.php" style="color: #fff; font-size: 10px;">Admin</a></p>
 </footer>
 </body>
 </html>
