--- a/support.html
+++ b/support.html
@@ -17,7 +17,7 @@
     <a href="home.html"><img src="nokialogo.png" alt="Logo" class="logo-lower-left"></a>
     <ul>
       <li><a href="products.html" class="nav-link">Products</a></li>
-      <li><a href="contact.html" class="nav-link">Contact</a></li>
+      <li><a href="contact.php" class="nav-link">Contact</a></li>
       <li><a href="about.html" class="nav-link">We Are Nokia</a></li>
       <li><a href="support.html" class="nav-link">Support</a></li>
     </ul>
